--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -1,16 +1,16 @@
+// bootstrap theme
+$theme-colors: (
+  "light":      #dedad6,
+  "dark":       #050506,
+  "primary":    #224870,
+  "secondary":  #2a4494,
+  "info":       #6a5837,
+  "success":    #249658,
+  "warning":    #dfc727,
+  "danger":     #eb1814,
+);
 $quick-silver: #a5a5a5ff;
 $light-gray: #cccf;
 $field-drab: #6a5837ff;
 $indigo-dye: #224870ff;
 $dark-cornflower-blue: #2a4494ff;
-
-/* SCSS Gradient */
-$gradient-top: linear-gradient(0deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-right: linear-gradient(90deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-bottom: linear-gradient(180deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-left: linear-gradient(270deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-top-right: linear-gradient(45deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-bottom-right: linear-gradient(135deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-top-left: linear-gradient(225deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-bottom-left: linear-gradient(315deg, #a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
-$gradient-radial: radial-gradient(#a5a5a5ff, #cccf, #6a5837ff, #224870ff, #2a4494ff);
